vlib/v/checker/tests/map_cast_err.vv
h := {'h': 23}
println(int(h))
